Bug 1799093 - Avoid breaking surrogate pairs etc when truncating titles in nsTreeBodyFrame.cpp. r=emilio

This is basically copied from how nsTextBoxFrame handles truncation, and avoids breaking surrogate pairs
(or other grapheme clusters such as base character + diacritic). It's still a "poor man's" version
of truncation that doesn't correctly measure the string in the presence of complex font shaping.

Longer-term, we should unify all this kind of truncation/ellipsizing of labels etc to use an implementation
based on CSS text-overflow, but that doesn't yet support center-cropping so it's not a drop-in replacement.
So I think we should do this as an interim measure to fix the most egregious brokenness, and make treeview
cells at least work similarly to textbox labels.

Tested manually; seems difficult to do automated tests as it'd be sensitive to exact glyph metrics.

Differential Revision: https://phabricator.services.mozilla.com/D161251